v4.6.0 - CredentialProvider interface updated to take hostname and port additionally to just credentials as it's required for some providers, like Kerberos